jobs/outputs/slurm-220196.out
  File "experiment.py", line 134
    parser.add_from pathlib import Path
                          ^
SyntaxError: invalid syntax
